# libproxy2

./: README.md  TODO.md  meson.build  meson_options.txt
.github/workflows/: build.yml  coverity.yml
docs/: meson.build  px.toml.in
src/: meson.build
src/backend/: dbus.c  libproxy-version.h.in  meson.build  px-config-module.h  px-manager.c  px-manager.h  px-module.c  px-module.h  px-pacrunner-module.h  px-plugin-config.c  px-plugin-config.h  px-plugin-pacrunner.c  px-plugin-pacrunner.h
src/backend/dbus/: meson.build
src/backend/modules/: config-env.c  config-env.h  config-gnome.c  config-gnome.h  meson.build  pacrunner-duktape.c  pacrunner-duktape.h
src/backend/plugins/: meson.build
src/backend/plugins/config-env/: config-env.c  config-env.h  config-env.plugin  meson.build
src/backend/plugins/config-gnome/: config-gnome.c  config-gnome.plugin  meson.build
src/backend/plugins/config-osx/: config-osx.c  meson.build
src/backend/plugins/config-sysconfig/: config-sysconfig.c  meson.build
src/backend/plugins/config-windows/: config-windows.c  config-windows.h  meson.build
src/backend/plugins/pacrunner-duktape/: meson.build  pacrunner-duktape.c
src/bindings/python/: libproxy.py  meson.build
src/libproxy/: libproxy.map  meson.build  proxy-glib.c  proxy-glib.h  proxy.c  proxy.h
src/tests/: config-env-test.c  config-sysconfig-test.c  meson.build  px-manager-helper.c
src/tools/: meson.build
