option('docs',
       type: 'boolean', value: true,
       description: 'Whether to generate the API reference for libproxy')

option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile test cases for libproxy')

option('introspection',
       type: 'boolean', value: true,
       description: 'Whether to use gobject introspection')

option('dbus',
       type: 'boolean', value: true,
       description: 'Whether to build dbus service')

option('plugin_config_env',
       type: 'boolean', value: true,
       description: 'Whether to build plugin for environment configuration')

option('plugin_config_gnome',
       type: 'boolean', value: true,
       description: 'Whether to build plugin for GNOME configuration')

option('plugin_pacrunner_duktape',
       type: 'boolean', value: true,
       description: 'Whether to build plugin for PAC Runner Duktape')
