subdir('config-env')
subdir('config-gnome')

subdir('pacrunner-duktape')

summary({
  'Configuration Environment' : get_option('plugin_config_env'),
  'Configuration GNOME      ' : get_option('plugin_config_gnome'),
  'PAC Runner Duktape       ' : get_option('plugin_pacrunner_duktape'),
}, section: 'Plugins')