subdir('config-env')
subdir('config-gnome')
subdir('config-windows')

subdir('pacrunner-duktape')

summary({
  'Configuration Environment' : get_option('config-env'),
  'Configuration GNOME      ' : get_option('config-gnome'),
  'Configuration Windows    ' : get_option('config-windows'),
  'PAC Runner Duktape       ' : get_option('pacrunner-duktape'),
}, section: 'Plugins')